--- a/ica/ica4/style.css
+++ b/ica/ica4/style.css
@@ -37,6 +37,7 @@ body {
   ul {
     list-style-type: square;
     padding: 2em;
+    background-color: #eeeeee;
     border-top: 5px solid purple;
     border-right: 5px solid purple;
     border-left:5px solid purple;
