--- a/ica/ica4/style.css
+++ b/ica/ica4/style.css
@@ -38,8 +38,5 @@ body {
     list-style-type: square;
     padding: 2em;
     background-color: #eeeeee;
-    border-top: 5px solid purple;
-    border-right: 5px solid purple;
-    border-left:5px solid purple;
-    border-bottom: 5px solid purple;
+    border: 5px solid purple;
   }
