--- a/css-midterm/style.css
+++ b/css-midterm/style.css
@@ -1,22 +1,49 @@
 body {
     font-family: Arial, sans-serif;
-    margin: 40px;
-    background-color: #f4f4f4;
+    line-height: 1.6;
+    margin: auto;
+    background-color: #f9f9f9;
 }
 
-.concert-container {
-    max-width: 100vw;
-    margin: 0 auto;
+header {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    width: 100%;
+    padding: 0px;
+    margin-bottom: 20px;
+}
+h1 {
+    margin: 0;
+}
+
+
+h2 {
+    color: #a5ccf3;
+}
+
+.date {
+    color: #8e44ad;
+    font-weight: bold;
+}
+
+.flex-container {
+    display: flex;
+    flex-direction: row;
+}
+
+
+
+
+.concert {
     background-color: #fff;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    padding: 15px;
+    margin-bottom: 15px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-.concert-date {
-    border-bottom: 1px solid #eee;
-    padding: 10px 0;
-}
-
-.concert-date:last-child {
-    border-bottom: none;
+footer {
+    text-align: center;
+    margin-top: 20px;
 }
