Added more stuf for aliyah

--- a/leeleedirts/views/index.html
+++ b/leeleedirts/views/index.html
@@ -9,7 +9,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     
     <!-- Your custom CSS (optional) -->
-    <link rel ="stylesheet" href = "style.css">
+    <link rel ="stylesheet" href = "../style/style.css">
 </head>
 <body>
     
@@ -23,7 +23,7 @@
                     <ul class="nav flex-column">
                         <li class="nav-item">
                             <a id="name" style="font-size: 5rem; font-weight: bold; color: black;">
-                                Aaliyah Gamble
+                                Aliyah Gamble
                             </a>
                         </li>
                         <li class="nav-item">
@@ -34,14 +34,18 @@
                         <li class="nav-item">
                             <div style="height: 50px;"></div>
                         </li>
-                        
                         <li class="nav-item">
-                            <a class="nav-link active" href="#" style="font-size:2rem; color: black; font-weight: bold; background-color: #f8f9fa;">
+                            <a class="nav-link active" href="index.html" style="font-size:2rem; color: black; font-weight: bold; background-color: #f8f9fa;">
+                                Sculpture
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="about.html" style="font-size:2rem; color: black; background-color: #f8f9fa;">
                                 About
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#" style="font-size:2rem; color: black; font-weight: bold; background-color: #f8f9fa;">
+                            <a class="nav-link active" href="contact.html" style="font-size:2rem; color: black; background-color: #f8f9fa;">
                                 Contact
                             </a>
                         </li>
@@ -59,9 +63,18 @@
             <main role="main" class="col-md-10 ml-sm-auto col-lg-10 px-4" style="height: 2000vh;">
                 <div class="image-flexbox">
                     <!-- Placeholder images (replace with your actual image URLs) -->
-                    <img src="/leeleedirts/img/image1.png" alt="Image 1">
-                    <img src="image1.png" alt="Image 2">
-                    <img src="/leeleedirts/img/image1.png" alt="Image 3">
+                    <img src="../img/image1.png" alt="Image 1">
+                    <img src="../img/image1.png" alt="Image 1">
+                    <img src="../img/image1.png" alt="Image 1">
+                    <img src="../img/image1.png" alt="Image 1">
+                    <img src="../img/image1.png" alt="Image 1">
+                    <img src="../img/image1.png" alt="Image 1">
+                    <img src="../img/image1.png" alt="Image 1">
+                    <img src="../img/image1.png" alt="Image 1">
+                    <img src="../img/image1.png" alt="Image 1">
+                    <img src="../img/image1.png" alt="Image 1">
+                    <img src="../img/image1.png" alt="Image 1">
+                    <img src="../img/image1.png" alt="Image 1">
                     <!-- Add more images as needed -->
                 </div>
             </main>
