All done with the framework

--- a/leeleedirts/views/about.html
+++ b/leeleedirts/views/about.html
@@ -60,10 +60,12 @@
     
 
             <!-- Main content area -->
+            <main style="margin-top: 3%;margin-left: 25%;"> 
+                <img style="width: 90%;" src="../img/image1.png">
+                <p  style="width: 90%;font-size: 2rem; padding: 10px;">Blah Blah Blah Im aliyah im so cool i do the cool art im pretty epic honestyl... Imm so awesom I have a cool tattooo Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Iaculis urna id volutpat lacus laoreet non curabitur. Scelerisque purus semper eget duis at tellus. Eu non diam phasellus vestibulum lorem sed risus ultricies tristique. Nam at lectus urna duis convallis. Leo urna molestie at elementum eu. Vulputate eu scelerisque felis imperdiet proin fermentum. Sed euismod nisi porta lorem mollis aliquam ut porttitor leo. Neque vitae tempus quam pellentesque nec nam. Iaculis nunc sed augue lacus viverra vitae congue. Elit sed vulputate mi sit amet mauris commodo quis imperdiet. Eros donec ac odio tempor orci dapibus ultrices in iaculis. Purus faucibus ornare suspendisse sed nisi lacus sed viverra. Ultricies lacus sed turpis tincidunt id. Id eu nisl nunc mi ipsum faucibus. Amet luctus venenatis lectus magna fringilla urna porttitor rhoncus dolor. Molestie at elementum eu facilisis sed.
+                </p>
+            </main>
             
-        </div>
-    </div>
-
     <!-- Bootstrap JS and dependencies (jQuery, Popper.js) -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
