added the image carousel feature and cleaned up the hierarchy of documents

--- a/leeleedirts/style/style.css
+++ b/leeleedirts/style/style.css
@@ -34,3 +34,15 @@ html {
 body {
     background-color: grey;
 }
+
+.modal-dialog {
+    max-height: 90vh;
+}
+
+/* Ensure the image inside the carousel respects the maximum height */
+#imageCarousel img {
+    max-height: 90vh;
+    max-width: 100%;
+    width: auto;
+    margin: auto;
+}
